tth-sdo/main/default/objects/FAQ__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Details</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>