tth-sdo/main/default/objects/FAQ__kav/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>