tth-sdo/main/default/objects/FAQ__kav/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>